# cpp-cmake-gtest-kata

./: CMakeLists.txt  README.md  doit.sh  kata.cpp
